fix overflow in leg-end modal

--- a/src/App.css
+++ b/src/App.css
@@ -532,6 +532,7 @@
 
 .LegEndModalInner {
   overflow: auto;
+  height: 100%;
 }
 
 .LegEndModal .CamelPlacing {
